pkg/plugins/runtime/gateway/testdata/02-gateway-listener.yaml
Clusters:
  Resources: {}
Endpoints:
  Resources: {}
Listeners:
  Resources:
    edge-gateway:HTTP:8080:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 8080
      enableReusePort: true
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: edge-gateway:HTTP:8080:*
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: edge-gateway:HTTP:8080
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
    edge-gateway:HTTP:9090:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 9090
      enableReusePort: true
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: edge-gateway:HTTP:9090:*
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: edge-gateway:HTTP:9090
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
Routes:
  Resources:
    edge-gateway:HTTP:8080:*:
      ignorePortInHostMatching: true
      name: edge-gateway:HTTP:8080:*
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - '*'
        name: '*'
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
    edge-gateway:HTTP:9090:*:
      ignorePortInHostMatching: true
      name: edge-gateway:HTTP:9090:*
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - '*'
        name: '*'
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
Runtimes:
  Resources:
    gateway.listeners:
      layer: {}
      name: gateway.listeners
Secrets:
  Resources: {}
